--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-    "name": "",
-    "short_name": "",
-    "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
+    "name": "LAB8_STARTER_FORK",
+    "short_name": "Damian",
+    "description": "A PWA that displays thanksgiving recipes",
+    "start_url": "/Lab8_Starter_fork/index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#ffa500",
     "icons": [
       {
         "src": "/assets/images/icons/icon-192x192.png",
         "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-512x512.png",
+        "sizes": "512x512",
         "type": "image/png"
       }
     ]
